...
        PermissionsAndroid.PERMISSIONS.WRITE_EXTERNAL_STORAGE,
        {
          title: 'Storage Permission',
          message: 'App needs access to save images',
          buttonNeutral: 'Ask Later',
          buttonNegative: 'Cancel',
          buttonPositive: 'OK',
        },
      );
    }
    const sourcePath = viewerImageUri.replace('file://', '');
    const picturesDir = Platform.OS === 'android'
      ? `${RNFS.ExternalStorageDirectoryPath}/Pictures/OffgridMobile`
...
